folder name changed

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ console.log(str.length); // আউটপুট: 5
 
 এখানে, "Hello" স্ট্রিংটির দৈর্ঘ্য ৫, কারণ এতে ৫টি অক্ষর আছে।
 console.log(str[0]); // আউটপুট: "H"
-console.log(str[4]); // আউটপুট: "o"
+console.log(str[4]); // আউটপুট: 'o'
 
 সংক্ষেপে:
 দৈর্ঘ্য (Length): ১ থেকে গণনা করা হয় (যেমন, ১, ২, ৩, ...).
