--- a/README
+++ b/README
@@ -1097,3 +1097,294 @@ function square(num1,num2){
     return num1 ** num2
 }
 console.log(calculate(4,4));<<<<<<<<another example
+
+
+হাইয়ার অর্ডার ফাংশন (Higher-Order Function) হলো সেই ফাংশন যা একটি বা একাধিক ফাংশনকে আর্গুমেন্ট হিসেবে গ্রহণ করে, অথবা অন্য একটি ফাংশনকে রিটার্ন করে।
+
+কলব্যাক ফাংশন (Callback Function) হলো সেই ফাংশন যা হাইয়ার অর্ডার ফাংশনের আর্গুমেন্ট হিসেবে পাস করা হয় এবং সেই ফাংশনের ভিতরে নির্দিষ্ট সময়ে কল করা হয়।
+সারাংশ:
+যদি একটি ফাংশন অন্য একটি ফাংশনকে আর্গুমেন্ট হিসেবে গ্রহণ করে, তাহলে প্রথম ফাংশনটিকে হাইয়ার অর্ডার ফাংশন বলা হয়।
+সেই আর্গুমেন্ট হিসেবে পাস করা ফাংশনটিকে কলব্যাক ফাংশন বলা হয়, যা নির্দিষ্ট সময়ে বা শর্তে কল হয়।
+এইভাবে, হাইয়ার অর্ডার ফাংশন এবং কলব্যাক ফাংশন একসাথে কাজ করে এবং প্রোগ্রামিংয়ে বিভিন্ন ডাইনামিক এবং জটিল কাজ সম্পন্ন করতে ব্যবহৃত হয়।
+
+
+
+>>>>>>>কলব্যাক ফাংশন (Callback Function)<<<<<<<< 
+
+হলো একটি ফাংশন যা অন্য একটি ফাংশনের আর্গুমেন্ট হিসেবে পাস করা হয় এবং সেই ফাংশনের ভিতরে নির্দিষ্ট কোনো সময় বা নির্দিষ্ট কোনো শর্ত পূরণ হলে কল (execute) করা হয়। সহজভাবে বললে, কলব্যাক ফাংশন হল একটি ফাংশন যা অন্য কোনো ফাংশনের মাধ্যমে ডাকা হয়।
+
+কলব্যাক ফাংশনের কাজ:
+ডাইনামিক আচরণ: কলব্যাক ফাংশন ব্যবহার করে তুমি একটি ফাংশনের ভিতরে ডাইনামিকভাবে কাজ সম্পন্ন করতে পারো।
+এছাড়াও: কলব্যাক ফাংশন সাধারণত তখন ব্যবহার হয় যখন কোনো কাজ শেষ হওয়ার পর কিছু করতে হয়, যেমন ডেটা লোড হওয়ার পর তা প্রসেস করা।
+কলব্যাক ফাংশনের উদাহরণ:
+ধরা যাক, তুমি একটি ফাংশন লিখতে চাও যা একটি সংখ্যা অ্যারে (array) এর সবগুলো মানকে প্রসেস করবে। তবে, প্রসেস করার পদ্ধতি (যেমন, যোগ করা, গুণ করা ইত্যাদি) তুমি পরে নির্ধারণ করবে। এই ক্ষেত্রে, সেই প্রসেস পদ্ধতিটি কলব্যাক ফাংশন হিসেবে পাস করা যেতে পারে।
+
+
+// অ্যারের মানগুলোর উপর নির্দিষ্ট একটি অপারেশন প্রয়োগ করার জন্য ফাংশন
+function processArray(arr, callback) {
+  const result = [];
+  for (let i = 0; i < arr.length; i++) {
+    result.push(callback(arr[i]));
+  }
+  return result;
+}
+
+// কলব্যাক ফাংশন: প্রতিটি সংখ্যার দ্বিগুণ করা
+function double(num) {
+  return num * 2;
+}
+
+// কলব্যাক ফাংশন: প্রতিটি সংখ্যার স্কোয়ার করা
+function square(num) {
+  return num * num;
+}
+
+// `processArray` ফাংশনে `double` কলব্যাক ফাংশন হিসেবে পাস করা হলো
+const doubledArray = processArray([1, 2, 3, 4], double);
+console.log(doubledArray); // [2, 4, 6, 8]
+
+// `processArray` ফাংশনে `square` কলব্যাক ফাংশন হিসেবে পাস করা হলো
+const squaredArray = processArray([1, 2, 3, 4], square);
+console.log(squaredArray); // [1, 4, 9, 16]
+
+ব্যাখ্যা:
+processArray ফাংশন:
+
+এটি একটি হাইয়ার অর্ডার ফাংশন, কারণ এটি একটি ফাংশন (callback) কে আর্গুমেন্ট হিসেবে গ্রহণ করে।
+লুপের মাধ্যমে প্রতিটি আইটেমের জন্য callback ফাংশনটি কল করা হয় এবং ফলাফল একটি নতুন অ্যারেতে রাখা হয়।
+double এবং square ফাংশন:
+
+এগুলো হলো কলব্যাক ফাংশন। এই ফাংশনগুলোকে processArray ফাংশনের আর্গুমেন্ট হিসেবে পাস করা হয়েছে।
+যখন processArray ফাংশনটি কল করা হয়, তখন এই কলব্যাক ফাংশনগুলোকে সেই ফাংশনের ভিতরে নির্দিষ্ট সময়ে কল করা হয়।
+গুরুত্বপূর্ণ বিষয়:
+কলব্যাক ফাংশন নিজে নিজে কখনোই কল হয় না। এটি তখনই কল হয় যখন সেই ফাংশনটি যাকে এটি পাস করা হয়েছে, সেই সময়ে বা শর্তে পৌঁছায়।
+কলব্যাক ফাংশন ব্যবহার করলে কোডের ফ্লো (flow) নিয়ন্ত্রণ করা সহজ হয় এবং নির্দিষ্ট কাজ শেষ হওয়ার পর প্রয়োজনীয় কাজ সম্পন্ন করা যায়।
+সারসংক্ষেপ:
+কলব্যাক ফাংশন হলো একটি ফাংশন যা অন্য একটি ফাংশনের আর্গুমেন্ট হিসেবে পাস করা হয় এবং সেই ফাংশনের ভিতরে নির্দিষ্ট সময়ে কল করা হয়। এটি প্রোগ্রামিংয়ে গুরুত্বপূর্ণ একটি ধারণা, যা কোডকে আরও ফ্লেক্সিবল এবং ডাইনামিক করতে সহায়তা করে।
+
+
+>>>>>>>>Statement and Expression<<<<<<<<<<<
+স্টেটমেন্ট হলো একটি কোড যা একটি কাজ সম্পন্ন করে এবং প্রোগ্রামের নির্দেশনা দেয়, যেমন ভেরিয়েবল ডিক্লারেশন, লুপ বা শর্তমূলক লজিক।
+1. যেমন if, for লুপ, ইত্যাদি) একটি কাজ সম্পন্ন করে, তবে এটি একটি মান রিটার্ন করে না। তাই এগুলোকে ভেরিয়েবলের ডান পাশে (right side) ব্যবহার করা যায় না।
+
+এক্সপ্রেশন হলো একটি কোড যা একটি মান রিটার্ন করে, যেমন গাণিতিক হিসাব বা স্ট্রিং সংযোগ।
+1. সবসময় একটি মান রিটার্ন করে। তাই এগুলোকে ভেরিয়েবলের ডান পাশে (right side) ব্যবহার করা যায়।
+
+>>>ফাংশন এক্সপ্রেশন 
+হলো একটি ফাংশন যা একটি ভেরিয়েবলে সংরক্ষণ করা হয়। এটি ফাংশন ডিক্লেয়ারেশনের মতোই কাজ করে, তবে ভেরিয়েবলের মতো ব্যবহৃত হয়।
+const myFunction = function() {
+  return "Hello!";
+};
+এখানে myFunction একটি ফাংশন এক্সপ্রেশন, যা ভেরিয়েবলে সংরক্ষিত এবং পরে যেকোনো সময় কল করা যেতে পারে।
+
+
+>>>>>>>>Nullish Coalescing Operator (??) <<<<<<<<<
+হলো JavaScript-এর একটি অপারেটর যা কোনো ভেরিয়েবলের মান null বা undefined হলে একটি ডিফল্ট মান রিটার্ন করার জন্য ব্যবহৃত হয়।
+
+উদাহরণ দিয়ে ব্যাখ্যা:
+ধরা যাক, তুমি কোনো ভেরিয়েবল চেক করছো, এবং যদি সেই ভেরিয়েবলের মান null বা undefined হয়, তাহলে তুমি একটি নির্দিষ্ট ডিফল্ট মান দিতে চাও:
+let name = null;
+let defaultName = "Guest";
+
+let finalName = name ?? defaultName;
+console.log(finalName); // Output: "Guest"
+ব্যাখ্যা:
+এখানে, name ভেরিয়েবলের মান null।
+?? অপারেটরটি দেখে যে name এর মান null, তাই এটি defaultName রিটার্ন করে, যা "Guest"।
+অর্থাৎ, Nullish Coalescing Operator ব্যবহার করে তুমি নিশ্চিত করতে পারো যে কোনো ভেরিয়েবল null বা undefined হলে তার জন্য একটি ডিফল্ট মান থাকবে।
+
+এই অপারেটরটি || (logical OR) এর মতো দেখতে হলেও একটু ভিন্নভাবে কাজ করে। || অপারেটরটি কোনো falsy মান পেলেই ডিফল্ট মান রিটার্ন করে, কিন্তু ?? অপারেটরটি শুধু null বা undefined হলে ডিফল্ট মান রিটার্ন করে।
+
+>>>>>>>>>Rest Operator (...) <<<<<<<<
+Rest Operator (...) JavaScript-এ একটি শক্তিশালী ফিচার যা ফাংশনের প্যারামিটার, অ্যারে, এবং অবজেক্টের সাথে কাজ করতে ব্যবহৃত হয়। এটি সহজ ভাষায় বলতে গেলে অবশিষ্ট উপাদানগুলোকে (elements) বা প্রোপার্টিগুলোকে (properties) সংগ্রহ করে একটি নতুন অ্যারে বা অবজেক্টে সংরক্ষণ করে।
+
+1. Array-তে Rest Operator:
+Rest Operator ব্যবহার করে তুমি একটি অ্যারের কিছু উপাদানকে আলাদা করে বাকি উপাদানগুলোকে নতুন একটি অ্যারেতে রাখতে পারো।
+const numbers = [1, 2, 3, 4, 5];
+const [first, second, ...rest] = numbers;
+
+console.log(first); // Output: 1
+console.log(second); // Output: 2
+console.log(rest); // Output: [3, 4, 5]
+ব্যাখ্যা:
+first এবং second-এ প্রথম দুটি উপাদান সংরক্ষিত হয়।
+...rest অপারেটরটি বাকি উপাদানগুলোকে নতুন একটি অ্যারে rest-এ সংরক্ষণ করে।
+
+2. Object-এ Rest Operator:
+Object-এর ক্ষেত্রে, Rest Operator ব্যবহার করে কিছু প্রোপার্টিকে আলাদা করে বাকি প্রোপার্টিগুলোকে নতুন একটি অবজেক্টে রাখা যায়।
+const person = {
+    name: "Alice",
+    age: 25,
+    city: "Wonderland",
+    profession: "Developer"
+};
+
+const { name, ...rest } = person;
+
+console.log(name); // Output: "Alice"
+console.log(rest); // Output: { age: 25, city: "Wonderland", profession: "Developer" }
+ব্যাখ্যা:
+name প্রোপার্টিটি সরাসরি person অবজেক্ট থেকে আলাদা করা হয়েছে।
+...rest অপারেটরটি বাকি প্রোপার্টিগুলোকে নতুন একটি অবজেক্ট rest-এ সংরক্ষণ করে।
+
+
+3. Function Parameter-এ Rest Operator:
+ফাংশনের প্যারামিটারের মধ্যে Rest Operator ব্যবহার করে তুমি অজানা সংখ্যক আর্গুমেন্ট গ্রহণ করতে পারো এবং এগুলোকে একটি অ্যারেতে সংরক্ষণ করতে পারো।
+function sum(...numbers) {
+    return numbers.reduce((acc, current) => acc + current, 0);
+}
+
+console.log(sum(1, 2, 3, 4)); // Output: 10
+ব্যাখ্যা:
+...numbers অপারেটরটি সব আর্গুমেন্টকে একটি অ্যারেতে গ্রহণ করে।
+তারপর reduce মেথড ব্যবহার করে সব সংখ্যার যোগফল বের করা হয়েছে।
+সংক্ষেপে:
+Array-তে: Rest Operator বাকি উপাদানগুলোকে একটি নতুন অ্যারেতে রাখে।
+Object-এ: Rest Operator বাকি প্রোপার্টিগুলোকে একটি নতুন অবজেক্টে রাখে।
+Function Parameter-এ: Rest Operator সব আর্গুমেন্টকে একটি অ্যারেতে ধরে।
+Rest Operator দিয়ে তুমি যেকোনো কোডকে আরো ফ্লেক্সিবল করতে পারো এবং অপ্রয়োজনীয় উপাদান বা প্রোপার্টিগুলোকে সহজে হ্যান্ডেল করতে পারো।
+
+
+Rest Operator ফাংশনের প্যারামিটার হিসেবে ব্যবহার করে অবজেক্টের প্রোপার্টিগুলোকে সহজে হ্যান্ডেল করা যায়। ফাংশনে যখন একটি অবজেক্ট পাঠানো হয়, তখন rest operator ব্যবহার করে সেই অবজেক্টের নির্দিষ্ট কিছু প্রোপার্টি আলাদা করা যায় এবং বাকি প্রোপার্টিগুলোকে একসাথে একটি নতুন অবজেক্টে সংরক্ষণ করা যায়।
+
+উদাহরণ:
+ধরা যাক, তোমার কাছে একটি অবজেক্ট আছে যেখানে বিভিন্ন প্রোপার্টি রয়েছে, এবং তুমি ফাংশনের মধ্যে কিছু প্রোপার্টি আলাদা করতে চাও:
+
+function displayPerson({ name, age, ...rest }) {
+    console.log("Name:", name);
+    console.log("Age:", age);
+    console.log("Other Info:", rest);
+}
+
+const person = {
+    name: "Alice",
+    age: 25,
+    city: "Wonderland",
+    profession: "Developer"
+};
+
+displayPerson(person);
+ব্যাখ্যা:
+displayPerson ফাংশনটি একটি অবজেক্ট গ্রহণ করে। প্যারামিটারের মধ্যে { name, age, ...rest } ব্যবহার করা হয়েছে, যেখানে:
+name এবং age সরাসরি আলাদা করা হয়েছে।
+...rest অপারেটরটি অবজেক্টের বাকি প্রোপার্টিগুলোকে rest নামে একটি নতুন অবজেক্টে সংরক্ষণ করেছে।
+displayPerson ফাংশনটি কল করার সময় person অবজেক্টটি পাঠানো হয়েছে। ফাংশনটি name এবং age আলাদা করে দেখিয়েছে এবং বাকি প্রোপার্টিগুলোকে rest অবজেক্টে সংরক্ষণ করে প্রিন্ট করেছে।
+ব্যাখ্যা:
+displayPerson ফাংশনটি একটি অবজেক্ট গ্রহণ করে। প্যারামিটারের মধ্যে { name, age, ...rest } ব্যবহার করা হয়েছে, যেখানে:
+name এবং age সরাসরি আলাদা করা হয়েছে।
+...rest অপারেটরটি অবজেক্টের বাকি প্রোপার্টিগুলোকে rest নামে একটি নতুন অবজেক্টে সংরক্ষণ করেছে।
+displayPerson ফাংশনটি কল করার সময় person অবজেক্টটি পাঠানো হয়েছে। ফাংশনটি name এবং age আলাদা করে দেখিয়েছে এবং বাকি প্রোপার্টিগুলোকে rest অবজেক্টে সংরক্ষণ করে প্রিন্ট করেছে।
+Name: Alice
+Age: 25
+Other Info: { city: "Wonderland", profession: "Developer" }
+এখানে rest operator ব্যবহার করে অবজেক্টের নির্দিষ্ট কিছু প্রোপার্টি আলাদা করা হয়েছে এবং বাকি প্রোপার্টিগুলোকে একটি নতুন অবজেক্টে সংগঠিত করা হয়েছে। এটি বিশেষভাবে উপযোগী যখন তুমি একটি অবজেক্ট থেকে কিছু প্রোপার্টি আলাদা করে বাকি সবগুলো প্রোপার্টি একসাথে ব্যবহার করতে চাও।
+
+
+>>>>>>>>>>Array Helper methods <<<<<<<<<<<<
+
+>>map()
+ হলো JavaScript-এর একটি গুরুত্বপূর্ণ অ্যারে হেল্পার মেথড, যা প্রতিটি উপাদানের উপর একটি নির্দিষ্ট ফাংশন প্রয়োগ করে এবং সেই ফাংশনের আউটপুট নিয়ে একটি নতুন অ্যারে তৈরি করে। এটি মূল অ্যারেটিকে পরিবর্তন না করে একটি নতুন অ্যারে রিটার্ন করে।
+
+কীভাবে map() কাজ করে:
+map() মেথডটি অ্যারের প্রতিটি উপাদানের উপর একটি কাস্টম ফাংশন চালায় এবং সেই ফাংশনের আউটপুট নিয়ে একটি নতুন অ্যারে তৈরি করে।
+উদাহরণ:
+const numbers = [1, 2, 3, 4, 5];
+
+const doubled = numbers.map(function(num) {
+    return num * 2;
+});
+
+console.log(doubled); // Output: [2, 4, 6, 8, 10]
+console.log(numbers); // Output: [1, 2, 3, 4, 5] (মূল অ্যারে অপরিবর্তিত থাকে)
+
+ব্যাখ্যা:
+numbers নামে একটি অ্যারে রয়েছে যেখানে [1, 2, 3, 4, 5] উপাদানগুলো রয়েছে।
+map() মেথডটি প্রতিটি উপাদানের উপর num * 2 ফাংশনটি প্রয়োগ করে।
+নতুন অ্যারেটি doubled নামের একটি অ্যারেতে [2, 4, 6, 8, 10] হিসেবে রিটার্ন করে।
+মূল অ্যারেটি (numbers) অপরিবর্তিত থাকে, যা [1, 2, 3, 4, 5]।
+map() দিয়ে কী কী করা যায়:
+
+1.অ্যারের প্রতিটি উপাদান পরিবর্তন করা:
+map() ব্যবহার করে তুমি প্রতিটি উপাদানের উপর নির্দিষ্ট কোনো অপারেশন করতে পারো, যেমন উপাদানগুলোকে গুণ করা, যোগ করা, স্ট্রিং ফরম্যাটে রূপান্তর করা ইত্যাদি।
+
+2.অ্যারের উপাদানগুলো থেকে নতুন কিছু তৈরি করা:
+map() ব্যবহার করে তুমি অ্যারের প্রতিটি উপাদান থেকে একটি নতুন ভ্যালু জেনারেট করতে পারো। যেমন, নামের প্রথম অক্ষর, একাধিক প্রোপার্টি থেকে একটি নির্দিষ্ট প্রোপার্টি নেওয়া ইত্যাদি।
+
+3.অবজেক্টের অ্যারের সাথে কাজ করা:
+অবজেক্টের অ্যারের ক্ষেত্রে map() ব্যবহার করে প্রতিটি অবজেক্টের নির্দিষ্ট প্রোপার্টির উপর অপারেশন চালিয়ে নতুন অ্যারে তৈরি করতে পারো।
+>>>>>>>>>>>>>>>>>>>  
+map() দিয়ে কী করা যাবে না:
+1.মূল অ্যারেটি পরিবর্তন করা যাবে না:
+map() কখনই মূল অ্যারেটিকে পরিবর্তন করে না। এটি সবসময় একটি নতুন অ্যারে রিটার্ন করে।
+
+2.অ্যারের ফিল্টারিং করা যাবে না:
+map() মেথডটি সব উপাদানের উপর কাজ করে এবং নতুন অ্যারে রিটার্ন করে। এটি কোনো উপাদান বাদ দেওয়া বা ফিল্টার করার জন্য নয়। ফিল্টারিংয়ের জন্য filter() মেথড ব্যবহার করতে হবে।
+
+3.নতুন অ্যারে রিটার্ন না করা যাবে না:
+map() সবসময় একটি নতুন অ্যারে রিটার্ন করবে। যদি তোমার কোনো মেথডের দরকার হয় যা শুধু সাইড এফেক্ট ঘটাবে (যেমন, কনসোল লগ করা) এবং নতুন অ্যারে রিটার্ন করবে না, তাহলে forEach() মেথড ব্যবহার করতে হবে।
+
+
+সংক্ষেপে:
+map() মেথডটি অ্যারের প্রতিটি উপাদানের উপর একটি নির্দিষ্ট ফাংশন প্রয়োগ করে এবং সেই ফাংশনের আউটপুট নিয়ে একটি নতুন অ্যারে তৈরি করে।
+এটি মূল অ্যারেটিকে পরিবর্তন না করে একটি নতুন অ্যারে রিটার্ন করে।
+এটি ফিল্টারিং বা সাইড এফেক্ট ঘটানোর জন্য নয়, বরং উপাদানগুলোকে পরিবর্তন করে নতুন কিছু তৈরি করার জন্য ব্যবহার করা হয়।
+map() মেথডটি অ্যারে ম্যানিপুলেশনের জন্য অত্যন্ত কার্যকর, এবং এটি কোডকে আরও সংক্ষিপ্ত ও পরিষ্কার করতে সাহায্য করে।
+
+
+
+>>>>>every() এবং some()<<<<<<<<<
+হলো JavaScript-এর দুটি অ্যারে হেল্পার মেথড, যা অ্যারের উপাদানগুলো নিয়ে নির্দিষ্ট শর্ত যাচাই করার জন্য ব্যবহৃত হয়। এদের কাজের ধরন আলাদা হলেও উভয়ের উদ্দেশ্য হলো কোনো শর্তের ভিত্তিতে অ্যারের উপাদানগুলো যাচাই করা।
+
+1.every() মেথড:
+every() মেথডটি অ্যারের সব উপাদানের উপর একটি শর্ত পরীক্ষা করে এবং যদি অ্যারের প্রতিটি উপাদান সেই শর্ত পূরণ করে, তাহলে এটি true রিটার্ন করে। যদি কোনো একটি উপাদানও শর্ত পূরণ না করে, তাহলে এটি false রিটার্ন করে।
+const numbers = [2, 4, 6, 8];
+
+const allEven = numbers.every(function(num) {
+    return num % 2 === 0;
+});
+
+console.log(allEven); // Output: true
+ব্যাখ্যা:
+
+numbers নামে একটি অ্যারে রয়েছে যেখানে [2, 4, 6, 8] উপাদানগুলো রয়েছে।
+every() মেথডটি প্রতিটি উপাদান পরীক্ষা করে দেখছে যে সবগুলো সংখ্যা জোড় সংখ্যা কি না।
+যেহেতু প্রতিটি সংখ্যা জোড়, তাই এটি true রিটার্ন করেছে।
+const numbers = [2, 4, 5, 8];
+
+const allEven = numbers.every(function(num) {
+    return num % 2 === 0;
+});
+
+console.log(allEven); // Output: false
+
+ব্যাখ্যা:
+
+এখানে 5 সংখ্যাটি বিজোড়, তাই every() মেথডটি false রিটার্ন করেছে।
+some() মেথড:
+some() মেথডটি অ্যারের যে কোনো একটি উপাদান যদি একটি নির্দিষ্ট শর্ত পূরণ করে, তাহলে এটি true রিটার্ন করে। আর যদি কোনো উপাদানই শর্ত পূরণ না করে, তাহলে এটি false রিটার্ন করে।
+const numbers = [1, 3, 5, 7, 8];
+
+const hasEven = numbers.some(function(num) {
+    return num % 2 === 0;
+});
+
+console.log(hasEven); // Output: true
+ব্যাখ্যা:
+
+numbers নামে একটি অ্যারে রয়েছে যেখানে [1, 3, 5, 7, 8] উপাদানগুলো রয়েছে।
+some() মেথডটি পরীক্ষা করে দেখছে যে এই অ্যারেতে কোনো জোড় সংখ্যা আছে কি না।
+যেহেতু 8 একটি জোড় সংখ্যা, তাই এটি true রিটার্ন করেছে।
+const numbers = [1, 3, 5, 7];
+
+const hasEven = numbers.some(function(num) {
+    return num % 2 === 0;
+});
+
+console.log(hasEven); // Output: false
+ব্যাখ্যা:
+
+এখানে কোনো সংখ্যাই জোড় নয়, তাই some() মেথডটি false রিটার্ন করেছে।
+সংক্ষেপে:
+every() মেথডটি তখনই true রিটার্ন করবে যদি অ্যারের প্রতিটি উপাদান শর্ত পূরণ করে। অন্যথায়, এটি false রিটার্ন করবে।
+some() মেথডটি তখনই true রিটার্ন করবে যদি অ্যারের অন্তত একটি উপাদান শর্ত পূরণ করে। যদি কোনো উপাদানই শর্ত পূরণ না করে, তাহলে এটি false রিটার্ন করবে।
+এই দুই মেথড অ্যারে প্রক্রিয়াকরণের সময় শর্তভিত্তিক যাচাই করার জন্য খুবই উপকারী।
